2002-08-25 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/x_attribedit.nw: Fixed the focus on the value entry to be
	correct when labeling (naming) nets.

	* noweb/x_attribedit.nw: Added the key binding for the Escape key

	* noweb/x_fileselect.nw: Added the key binding for the Escape key

	* src/Makefile.am: Remove x_attrsel.nw (obsolete file)
	
2002-08-18 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/o_grips.nw: Fixed a bug where searching for grips would stop
	if something that did not have grips was selected.

	* noweb/o_misc.nw: Changed used_list initial value to be 0 so that
	the number one is used when autonumbering refdes's.

	* noweb/o_text.nw: Changed the color of the x and I (origin/invisible)
 	graphical cues to be grey (locked color) instead of red.  Red is 
	reserved for errors.

	* noweb/x_attribedit.nw: Changed the cursor focus entry to be the
	name entry when nothing is selected (i.e. not editing an attribute)

2002-08-05 Ales Hvezda   <ahvezda@geda.seul.org>

 	* noweb/i_basic.nw: Added a const to get rid of compiler warnings 
	when compiling with --disable-nls

2002-08-04 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/*: Added gettext patch by Alexandre P. Nunes.  Thank you for
	the work on i18n.

	* intl/ m4/ po/ ABOUT-NLS config.rpath: Added directories / files 
	to support above

	* configure.in: Updated to support above

	* include/gettext.h: Added include file to support above

	* include/globals.h: Added #include for gettext.h

2002-07-27 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/x_attribedit.nw: Changed the show options to be an option
	menu instead of a combo box

2002-07-14 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/o_misc.nw, x_dialog.nw, lib/system-gschemrc.in: Renamed 
	user visible references of uref to refdes

	* examples/*.sch: Update all schematics using gschupdate
	
2002-07-09 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/x_attribedit.nw: Added code so that value entry field is 