@@ -1,3 +1,10 @@
+2002-08-25 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* include/struct.h: Added setpagedevice* rc file variables
+
+	* noweb/f_print.nw: Added the code to implement the
+	setpagedevice-* rc keywords.
+	
 2002-07-14 Ales Hvezda   <ahvezda@geda.seul.org>
 
 	* noweb/o_attrib.nw: Added a comment to a line which was using
